--- a/game.project
+++ b/game.project
@@ -1,5 +1,6 @@
 [bootstrap]
 main_collection = /example/example.collectionc
+render = /builtins/render/default.renderc
 
 [script]
 shared_state = 1
@@ -9,8 +10,8 @@ width = 960
 height = 640
 
 [project]
-title = myextension
+title = ImGui
 
 [library]
-include_dirs = myextension
+include_dirs = imgui
 
