--- a/.github/workflows/bob.yml
+++ b/.github/workflows/bob.yml
@@ -28,13 +28,13 @@ jobs:
 
       - name: Get Defold version
         run: |
-          TMPVAR=`curl -s http://d.defold.com/${env.CHANNEL}/${{env.VERSION_FILENAME}} | jq -r '.sha1'`
+          TMPVAR=`curl -s http://d.defold.com/${{env.CHANNEL}}/${{env.VERSION_FILENAME}} | jq -r '.sha1'`
           echo "DEFOLD_VERSION=${TMPVAR}" >> $GITHUB_ENV
           echo "Found version ${TMPVAR}"
 
       - name: Download bob.jar
         run: |
-          wget -q http://d.defold.com/archive/${env.CHANNEL}/${{env.DEFOLD_VERSION}}/bob/bob.jar
+          wget -q http://d.defold.com/archive/${{env.CHANNEL}}/${{env.DEFOLD_VERSION}}/bob/bob.jar
           java -jar bob.jar --version
 
       - name: Resolve libraries
@@ -61,13 +61,13 @@ jobs:
 
       - name: Get Defold version
         run: |
-          TMPVAR=`curl -s http://d.defold.com/${env.CHANNEL}/${{env.VERSION_FILENAME}} | jq -r '.sha1'`
+          TMPVAR=`curl -s http://d.defold.com/${{env.CHANNEL}}/${{env.VERSION_FILENAME}} | jq -r '.sha1'`
           echo "DEFOLD_VERSION=${TMPVAR}" >> $GITHUB_ENV
           echo "Found version ${TMPVAR}"
 
       - name: Download bob.jar
         run: |
-          wget -q http://d.defold.com/archive/${env.CHANNEL}/${{env.DEFOLD_VERSION}}/bob/bob.jar
+          wget -q http://d.defold.com/archive/${{env.CHANNEL}}/${{env.DEFOLD_VERSION}}/bob/bob.jar
           java -jar bob.jar --version
 
       - name: Resolve libraries
